# cqupt-ics-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
cqupt-ics-cli/: Cargo.toml
cqupt-ics-cli/src/: cache.rs  commands.rs  lib.rs  main.rs  registry.rs
cqupt-ics-core/: Cargo.toml
cqupt-ics-core/src/: cache.rs  error.rs  holiday.rs  ics.rs  lib.rs  location.rs  providers.rs  semester.rs  types.rs
cqupt-ics-core/src/ics/: tests.rs
cqupt-ics-core/src/providers/: base.rs  redrock.rs  wecqupt.rs
cqupt-ics-server/: Cargo.toml
cqupt-ics-server/src/: cache.rs  handlers.rs  main.rs  registry.rs  server.rs
cqupt-ics-server/static/: app.js  index.html  styles.css
