[workspace]
members = ["cqupt-ics-core", "cqupt-ics-server", "cqupt-ics-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CQUPT ICS Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "brotli"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"
async-trait = "0.1"
base64 = "0.22"

# Database/Cache
redis = { version = "0.32", features = ["aio", "tokio-comp"] }

# Serialization for dynamic dispatch
typetag = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
