[package]
name = "cqupt-ics-core"
description = "Core library for CQUPT ICS calendar generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
regex.workspace = true
typetag.workspace = true

[dev-dependencies]
tokio-test = "0.4"
