[package]
name = "cqupt-ics-server"
description = "Web server for CQUPT ICS calendar service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
cqupt-ics-core = { path = "../cqupt-ics-core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
async-trait.workspace = true
redis.workspace = true
reqwest.workspace = true
